--- a/index.html
+++ b/index.html
@@ -6,23 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bipi Detailing</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/style.css">
+    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>  
 
     <header>
-        <nav class="navbar fixed-top navbar-dark bg-black navbar-expand-md">
-            <a href="X" class="navbar-brand"><img src="./img/logopng.png" alt="" class="d-inline-block"></a>
+        <nav class="navbar fixed-top navbar-dark bg-dark navbar-expand-md">
+            <a href="X" class="navbar-brand ms-2"><img src="./img/logopng.png" alt="" class="d-inline-block"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collmenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse flex-row-reverse" id="collmenu">
-                <div class="social-media">
+                <div class="social-media d-none d-md-block">
                     <a href="#"><img src="./img/iglogo.png" alt=""></a>
                     <a href="#"><img src="./img/fblogo.png" alt=""></a>
                 </div>
-                <ul class="navbar-nav">
+                <ul class="navbar-nav bg-dark text-center">
                     <li class="nav-item">
                         <a href="" class="nav-link">Strona główna</a>
                     </li>
@@ -55,21 +56,21 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./img/201051071_2594890744153613_3166017100701008672_n.jpg" class="d-block" alt="...">
+                <img src="./img/carouselv1.jpg" class="d-block" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>First slide label</h5>
                   <p>Some representative placeholder content for the first slide.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./img/199941640_2594403550868999_3174022530525154971_n.jpg" class="d-block" alt="...">
+                <img src="./img/carouselv2.jpg" class="d-block" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Second slide label</h5>
                   <p>Some representative placeholder content for the second slide.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./img/279264493_2804844483158237_1036795919580634718_n.jpg" class="d-block" alt="...">
+                <img src="./img/carouselv3.jpg" class="d-block" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Third slide label</h5>
                   <p>Some representative placeholder content for the third slide.</p>
