--- a/index.html
+++ b/index.html
@@ -1,13 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bipi Detailing</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bipi Detailing</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    <script src="script.js"></script>
+
+  <header>
+    <nav class="navbar navbar-expand-md">
+      <a href="X" class="navbar-brand ms-5 mt-3"><img src="./img/logopng.png" alt="" class="d-inline-block"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collmenu">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse flex-row-reverse" id="collmenu">
+        <div class="social-media d-none d-md-flex me-5">
+          <a href="#"><img src="./img/iglogo.png" alt=""></a>
+          <a href="#"><img src="./img/fblogo.png" alt=""></a>
+        </div>
+        <ul class="navbar-nav gap-md-5 text-center">
+          <li class="nav-item">
+            <a href="" class="nav-link">Strona główna</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link">O nas</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link">Usługi</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link">Cennik</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link">Kontakt</a>
+          </li>
+        </ul>
+
+
+      </div>
+
+
+    </nav>
+  </header>
+  <section class="slider ">
+    <div class="container">
+      <div id="slide1" class="slide flex-column flex-md-row">
+        <div class="slideImg col-12 col-md-6" id="slide1Img">
+          <div>
+            <div></div>
+          </div>
+        </div>
+        <p class="col-12 col-md-6">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis tempore necessitatibus
+          sapiente. Delectus quibusdam culpa beatae provident cupiditate rerum at?</p>
+      </div>
+      <div id="slide2" class="slide flex-column flex-md-row">
+        <div class="slideImg col-md-6" id="slide2Img">
+          <div>
+            <div></div>
+          </div>
+        </div>
+        <p class="col-md-6">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis tempore necessitatibus
+          sapiente. Delectus quibusdam culpa beatae provident cupiditate rerum at?</p>
+      </div>
+      <div id="slide3" class="slide flex-column flex-md-row">
+        <div class="slideImg col-md-6" id="slide3Img">
+          <div>
+            <div></div>
+          </div>
+        </div>
+        <p class="col-md-6">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis tempore necessitatibus
+          sapiente. Delectus quibusdam culpa beatae provident cupiditate rerum at?</p>
+      </div>
+    </div>
+    <button class="sliderButton" id='previous'><i class="fa-solid fa-angle-left"></i></button>
+    <button class="sliderButton" id="next"><i class="fa-solid fa-angle-right"></i></button>
+    <div class="slideIndicators">
+      <button id="showSlide1"></button>
+      <button id="showSlide2"></button>
+      <button id="showSlide3"></button>
+    </div>
+  </section>
+
+
+
+
+
+
+
+
+
+  <!-- <section class="carousel">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, odit numquam, inventore explicabo facilis assumenda cum in a ea atque ex? Deleniti accusamus porro eveniet rerum tempora blanditiis asperiores est officiis magni! </p>
+                <img src="./img/carouselv1.jpg" class="d-block" alt="...">
+              </div>
+              <div class="carousel-item">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, odit numquam, inventore explicabo facilis assumenda cum in a ea atque ex? Deleniti accusamus porro eveniet rerum tempora blanditiis asperiores est officiis magni! </p>
+                <img src="./img/carouselv2.jpg" class="d-block" alt="...">
+              </div>
+              <div class="carousel-item">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, odit numquam, inventore explicabo facilis assumenda cum in a ea atque ex? Deleniti accusamus porro eveniet rerum tempora blanditiis asperiores est officiis magni! </p>
+                <img src="./img/carouselv3.jpg" class="d-block" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </section> -->
+
+
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
+  </script>
+
+  <script src="script.js"></script>
 </body>
+
 </html>
