add services with modal

--- a/index.html
+++ b/index.html
@@ -25,38 +25,40 @@
       <a href="X" class="navbar-brand ms-5 mt-3"><img src="./img/logopng.png" alt="" class="d-inline-block"></a>
       <button class="navbar-toggler me-2" type="button" data-bs-toggle="collapse" data-bs-target="#collmenu">
 
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collmenu">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse flex-row-reverse" id="collmenu">
-        <div class="social-media d-none d-md-flex me-5">
-          <a href="#"><img src="./img/iglogo.png" alt=""></a>
-          <a href="#"><img src="./img/fblogo.png" alt=""></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collmenu">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse flex-row-reverse" id="collmenu">
+          <div class="social-media d-none d-md-flex me-5">
+            <a href="#"><img src="./img/iglogo.png" alt=""></a>
+            <a href="#"><img src="./img/fblogo.png" alt=""></a>
+          </div>
+          <ul class="navbar-nav gap-md-5 me-md-5 text-center">
+            <li class="nav-item">
+              <a href="" class="nav-link">Strona główna</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">O nas</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Usługi</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Cennik</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Kontakt</a>
+            </li>
+          </ul>
+
+
         </div>
-        <ul class="navbar-nav gap-md-5 me-md-5 text-center">
-          <li class="nav-item">
-            <a href="" class="nav-link">Strona główna</a>
-          </li>
-          <li class="nav-item">
-            <a href="" class="nav-link">O nas</a>
-          </li>
-          <li class="nav-item">
-            <a href="" class="nav-link">Usługi</a>
-          </li>
-          <li class="nav-item">
-            <a href="" class="nav-link">Cennik</a>
-          </li>
-          <li class="nav-item">
-            <a href="" class="nav-link">Kontakt</a>
-          </li>
-        </ul>
-
-
-      </div>
 
 
     </nav>
   </header>
+
+
   <section class="slider ">
     <div class="container">
       <div id="slide1" class="slide flex-column flex-md-row-reverse activeSlide">
@@ -84,7 +86,7 @@
         <p class="col-md-6">Pielęgnacja auta na <span>najwyższym</span> poziomie</p>
       </div>
     </div>
-    <div class="sliderButton" id='previous'><button ><i class="fa-solid fa-angle-left"></i></button></div>
+    <div class="sliderButton" id='previous'><button><i class="fa-solid fa-angle-left"></i></button></div>
     <div class="sliderButton" id='next'><button><i class="fa-solid fa-angle-right"></i></button></div>
     <div class="slideIndicators">
       <button id="showSlide1" data-index="0" class="activeIndicator"></button>
@@ -93,14 +95,115 @@
     </div>
   </section>
 
+
+
   <section class="oNas">
     <div class="oNasBcg">
       <div class="oNasWrap d-flex">
         <h1 class="sectionTitle">O nas</h1>
-        <p class="pFont">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi, incidunt a. Ut, at deserunt
+        <p class="longText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi, incidunt a. Ut, at deserunt
           ullam consequatur esse quos quod voluptatibus in totam voluptatem asperiores dignissimos porro exercitationem
           dolor ex eum.</p>
       </div>
+    </div>
+  </section>
+
+  <section class="services">
+    <h1 class="sectionTitle">Usługi</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 service">
+          <div class="wrap">
+
+            <div id="serviceBcg1" class="serviceBcg">
+              <h2>Zabezpieczenie lakieru</h2>
+            </div>
+            <!-- <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae soluta consequuntur accusantium ducimus, similique temporibus tenetur harum suscipit ratione quisquam, sunt error eaque dolores aperiam? Dolore expedita consequuntur architecto necessitatibus.</p> -->
+          </div>
+        </div>
+
+        <div class="col-md-4 service">
+          <div class="wrap">
+
+            <div id="serviceBcg2" class="serviceBcg">
+              <h2>Zabezpieczenie felg</h2>
+            </div>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae soluta consequuntur accusantium ducimus,
+              similique temporibus tenetur harum suscipit ratione quisquam, sunt error eaque dolores aperiam? Dolore
+              expedita consequuntur architecto necessitatibus.</p>
+          </div>
+        </div>
+        <div class="col-md-4 service">
+          <div class="wrap">
+            <div id="serviceBcg3" class="serviceBcg">
+              <h2>Zabezpieczenie szyb</h2>
+            </div>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae soluta consequuntur accusantium ducimus,
+              similique temporibus tenetur harum suscipit ratione quisquam, sunt error eaque dolores aperiam? Dolore
+              expedita consequuntur architecto necessitatibus.</p>
+          </div>
+        </div>
+        <div class="col-md-4 service">
+          <div class="wrap">
+
+            <div id="serviceBcg4" class="serviceBcg">
+              <h2>Renowacja lakieru</h2>
+            </div>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae soluta consequuntur accusantium ducimus,
+              similique temporibus tenetur harum suscipit ratione quisquam, sunt error eaque dolores aperiam? Dolore
+              expedita consequuntur architecto necessitatibus.</p>
+          </div>
+        </div>
+        <div class="col-md-4 service">
+          <div class="wrap">
+
+            <div id="serviceBcg5" class="serviceBcg">
+              <h2>Detailing wewnętrzny</h2>
+            </div>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae soluta consequuntur accusantium ducimus,
+              similique temporibus tenetur harum suscipit ratione quisquam, sunt error eaque dolores aperiam? Dolore
+              expedita consequuntur architecto necessitatibus.</p>
+          </div>
+        </div>
+        <div class="col-md-4 service">
+          <div class="wrap">
+
+            <div id="serviceBcg6" class="serviceBcg">
+              <h2>Detailing zewnętrzny</h2>
+            </div>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae soluta consequuntur accusantium ducimus,
+              similique temporibus tenetur harum suscipit ratione quisquam, sunt error eaque dolores aperiam? Dolore
+              expedita consequuntur architecto necessitatibus.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="popupService1" class="servicesPopupWrap">
+    <div class="servicesPopup">
+      <h1>Zabezpieczenie lakieru</h1>
+      <p class="description longText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos ab rem, eos
+        tempore tenetur, nisi voluptates libero praesentium perferendis labore omnis est dolor cupiditate culpa maiores
+        reiciendis ad veritatis? Maiores totam incidunt neque corrupti cum nulla quas? Animi illo aut, nemo iusto harum,
+        ut inventore ullam eum, provident veniam placeat.</p>
+      <div class="popupPricing">
+        <p class="s1 serviceName">Aplikacja wosku</p>
+        <span class="span1"></span>
+        <p class="price1">100zł - 200zł</p>
+        <p class="s2 serviceName">Aplikacja quick detailera</p>
+        <span class="span2"></span>
+        <p class="price2">w cenie mycia detailingowego</p>
+        <p class="s3 serviceName">Powłoka ceramiczna</p>
+        <span class="span3"></span>
+        <div class="price3">
+          <p> roczna 1000zł</p>
+          <p>dwuletnia 2000zł</p>
+          <p>pięcioletnia 3000zł</p>
+        </div>
+
+      </div>
+
     </div>
   </section>
 
