--- a/index.html
+++ b/index.html
@@ -382,8 +382,8 @@
     integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
   </script>
 
-  <script src="slider.js"></script>
-  <script src="popup.js"></script>
+  <script src="slider.js?v=2"></script>
+  <script src="popup.js?v=2"></script>
 </body>
 
 </html>
