--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <div></div>
             </div>
           </div>
-          <p class="col-12 col-md-6 px-md-5"><span>Kompleksowo</span> zadbany o czystość Twojego auta</p>
+          <p class="col-md-6 px-md-5 pt-3"><span>Kompleksowo</span> zadbany o czystość Twojego auta</p>
         </div>
         <div id="slide2" class="slide flex-column flex-md-row ">
           <div class="slideImg col-md-6" id="slide2Img">
@@ -78,7 +78,7 @@
           </div>
           <p class="col-md-6"><span>Profesjonalna</span> myjnia ręczna i studio detailingu</p>
         </div>
-        <div id="slide3" class="slide flex-column flex-md-row-reverse">
+        <div id="slide3" class="slide flex-column flex-md-row-reverse ">
           <div class="slideImg col-md-6" id="slide3Img">
             <div>
               <div></div>
