--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <header>
     <nav class="navbar navbar-expand-md">
-      <a href="X" class="navbar-brand ms-5 mt-3"><img src="./img/logopng.png" alt="" class="d-inline-block"></a>
+      <a href="" class="navbar-brand ms-5 mt-3"><img src="./img/logopng.png" alt="" class="d-inline-block"></a>
       <button class="navbar-toggler me-2" type="button" data-bs-toggle="collapse" data-bs-target="#collmenu">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collmenu">
           <span class="navbar-toggler-icon"></span>
@@ -54,7 +54,7 @@
   </header>
 
 
-  <section class="slider ">
+  <section class="slider">
     <div class="container">
       <div id="slide1" class="slide flex-column flex-md-row-reverse activeSlide">
         <div class="slideImg col-12 col-md-6" id="slide1Img">
@@ -72,7 +72,7 @@
         </div>
         <p class="col-md-6"><span>Profesjonalna</span> myjnia ręczna i studio detailingu</p>
       </div>
-      <div id="slide3" class="slide flex-column flex-md-row-reverse ">
+      <div id="slide3" class="slide flex-column flex-md-row-reverse">
         <div class="slideImg col-md-6" id="slide3Img">
           <div>
             <div></div>
@@ -81,7 +81,7 @@
         <p class="col-md-6">Pielęgnacja auta na <span>najwyższym</span> poziomie</p>
       </div>
     </div>
-    <div class="sliderButton" id='previous'><button><i class="fa-solid fa-angle-left"></i></button></div>
+    <div class="sliderButton" id='previous'><button ><i class="fa-solid fa-angle-left"></i></button></div>
     <div class="sliderButton" id='next'><button><i class="fa-solid fa-angle-right"></i></button></div>
     <div class="slideIndicators">
       <button id="showSlide1" data-index="0" class="activeIndicator"></button>
@@ -516,9 +516,9 @@
   </section>
 
   <section class="footer">
-    
+    <p>Copyright © 2022 Bipi Detailing</p>
   </section>
-
+  
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
     integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
   </script>
@@ -526,8 +526,8 @@
     integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
   </script>
 
-  <script src="slider.js?v=4"></script>
-  <script src="popup.js?v=4"></script>
+  <script src="popup.js"></script>
+  <script src="slider.js"></script>
 </body>
 
 </html>
