--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
         <p class="serviceName">Czyszczenie wnętrza standard</p>
         <span></span>
         <p>70 - 130zł</p>
-        <p class="serviceName">czyszczenie wnętrza premium</p>
+        <p class="serviceName">Czyszczenie wnętrza premium</p>
         <span></span>
         <p>150 - 320zł</p>
         <p class="serviceName">Pranie tapicerki materiałowej</p>
@@ -510,7 +510,7 @@
           <p class="serviceName">Czyszczenie wnętrza standard</p>
           <span></span>
           <p>70 - 130zł</p>
-          <p class="serviceName">czyszczenie wnętrza premium</p>
+          <p class="serviceName">Czyszczenie wnętrza premium</p>
           <span></span>
           <p>150 - 320zł</p>
           <p class="serviceName">Pranie tapicerki materiałowej</p>
